--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@twilio-paste/core": "^10.5.0",
     "@twilio-paste/icons": "^5.3.2",
     "axios": "^0.21.1",
+    "eslint": "^7.31.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
